Fixed header alignment when buttons are present.

--- a/client/templates/layout/global.css
+++ b/client/templates/layout/global.css
@@ -61,6 +61,15 @@ div.mandrill-error {
 
 
 
+
+.mandrill-header button {
+	position: absolute;
+	top: 30px;
+	right: 25px;
+}
+
+
+
 .mandrill-header {
 	text-align: center;
 	box-shadow: inset 10px -5px 10px -7px #000;
